# Real-Time-CryptoCurrency-Market-Analysis

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
streaming_pipeline/: config.py  dataflow_pipeline.py  pipeline_auxiliars.py  publisher.py
streaming_pipeline/utils/gcp/: pubsub.py
terraform/: backend.tf  main.tf  vars.tf
