[project]
name = "real-time-cryptocurrency-market-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-beam[gcp]>=2.63.0",
    "build>=1.2.2.post1",
    "google-cloud-pubsub>=2.30.0",
    "loguru>=0.7.3",
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["streaming_pipeline*"]